정태서 반영

--- a/index.html
+++ b/index.html
@@ -140,50 +140,11 @@
                 <h1 class="r-fit-text" data-id="3grade">3학년 2학기</h1>
               </div>
               <div>
-                <h3>광양백운초등학교</h3>
-                <h3>3학년 21명</h3>
+                <h3>우리는 누구인가 : 옛날과 오늘날의 가족</h3>
+                <h3>광양백운초등학교 3학년 5반</h3>
+                <h3>남 11명, 여 10 총 21명</h3>
               </div>
               <div></div>
-            </div>
-          </section>
-          <section
-            data-auto-animate
-            data-auto-animate-easing="cubic-bezier(0.770, 0.000, 0.175, 1.000)"
-          >
-            <h1 style="margin-top: 20px" data-id="3drade" class="r-fit-text">
-              우리는 누구인가: 옛날과 오늘날의 가족
-            </h1>
-            <div class="r-hstack justify-center">
-              <div
-                data-id="box1"
-                data-auto-animate-delay="0"
-                style="
-                  background: cyan;
-                  width: 150px;
-                  height: 100px;
-                  margin: 10px;
-                "
-              ></div>
-              <div
-                data-id="box2"
-                data-auto-animate-delay="0.1"
-                style="
-                  background: magenta;
-                  width: 150px;
-                  height: 100px;
-                  margin: 10px;
-                "
-              ></div>
-              <div
-                data-id="box3"
-                data-auto-animate-delay="0.2"
-                style="
-                  background: yellow;
-                  width: 150px;
-                  height: 100px;
-                  margin: 10px;
-                "
-              ></div>
             </div>
           </section>
           <section
@@ -472,23 +433,7 @@
               </div>
             </header>
             <div style="margin-top: 50px">
-              <table>
-                <tr>
-                  <th scope="col">구분</th>
-                  <th scope="col">내용</th>
-                </tr>
-                <tr>
-                  <td>성취기준</td>
-                  <td>
-                    <p>
-                      <text style="font-size: 2rem"
-                        >[4사03-01] 최근 사회 변화의 양상과 특징을 파악하고,
-                        그로 인해 나타난 생활모습의 변화를 탐색한다.</text
-                      >
-                    </p>
-                  </td>
-                </tr>
-              </table>
+              <img src="public/32concept.png" />
             </div>
           </section>
           <section data-auto-animate>
@@ -531,7 +476,6 @@
                 "
               ></div>
               <div
-                data-id="header-title"
                 style="
                   display: flex;
                   flex-direction: column;
@@ -541,8 +485,220 @@
                 <text>단원 설계안</text>
               </div>
             </header>
-            <div style="margin-top: 50px">
-              <img src="public/32concept.png" />
+            <div>
+              <h1>안내 질문</h1>
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>총괄평가</text>
+              </div>
+            </header>
+            <div style="height: 50vh; margin-top: 50px">
+              <img src="public/32-final-test.png" />
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>개념 형성 차시</text>
+              </div>
+            </header>
+            <div>
+              <img src="public/8-result.png" />
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>일반화 도출 차시</text>
+              </div>
+            </header>
+            <div>
+              <img src="public/13-result.png" />
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>전이 차시</text>
+              </div>
+            </header>
+            <div style="height: 40vh">
+              <img src="public/final.png" />
             </div>
           </section>
           <section data-auto-animate>
@@ -2153,11 +2309,8 @@
                 <text>총괄평가</text>
               </div>
             </header>
-            <div style="margin-top: 100px">
-              <img
-                src="public/ju-final-test.png"
-                style="width: 80vw; height: 60vh"
-              />
+            <div style="margin-top: 100px; height: 50vh">
+              <img src="public/ju-final-test.png" />
             </div>
           </section>
           <section data-auto-animate>
@@ -2209,7 +2362,7 @@
                 <text>학습활동</text>
               </div>
             </header>
-            <div style="margin-top: 100px; height: 100vh">
+            <div style="margin-top: 100px; height: 50vh">
               <img src="public/ju-curriculum.png" style="object-fit: cover" />
             </div>
           </section>
@@ -2263,7 +2416,7 @@
               </div>
             </header>
             <div
-              style="margin-top: 50px; display: flex; width: 50vw; height: 50vh"
+              style="margin-top: 50px; display: flex; width: 30vw; height: 40vh"
             >
               <img src="public/ju-23.jpg" style="margin-right: 50px" />
               <img src="public/ju-234.jpg" />
@@ -2318,9 +2471,9 @@
                 <text>활동 결과물</text>
               </div>
             </header>
-            <div style="margin-top: 100px" style="width: 100vw; height: 100vh">
+            <div style="margin-top: 100px" style="height: 40vh">
               <!-- 11차시 활동 결과물 사진 추가 -->
-              <img src="public/11-result.png" style="object-fit: cover" />
+              <img src="public/11-result.png" />
             </div>
           </section>
           <section data-auto-animate>
@@ -2686,33 +2839,53 @@
           </section>
           <section data-auto-animate>
             <h1 class="r-fit-text">전이(단원총괄평가) 설계</h1>
-            <p>
+            <div>
               <ul>
                 <li>GRASPS 방식</li>
               </ul>
-            </p>
+            </div>
           </section>
           <section data-auto-animate>
             <h1 class="r-fit-text">전이(단원총괄평가) 설계</h1>
-            <div style="display: flex; justify-content:center; align-items: center;">
-              <div style="display: flex; flex-direction: column; padding-right: 25px; border-right: 3px solid black; padding-top: 10px; ">
-                <h3 >GRASPS 방식</h3>
-                <p>
+            <div
+              style="
+                display: flex;
+                justify-content: center;
+                align-items: center;
+              "
+            >
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  padding-right: 25px;
+                  border-right: 3px solid black;
+                  padding-top: 10px;
+                "
+              >
+                <h3>GRASPS 방식</h3>
+                <div>
                   <ul>
-                    <li>
-                    </li>
+                    <li></li>
                     <li></li>
                   </ul>
-                </p>
+                </div>
               </div>
-              <div style="display: flex; flex-direction: column; padding-left: 25px; padding-top: 10px;">
-                <h3 >Erickson 방식</h3>
-                <p>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  padding-left: 25px;
+                  padding-top: 10px;
+                "
+              >
+                <h3>Erickson 방식</h3>
+                <div>
                   <ul>
                     <li></li>
                     <li></li>
                   </ul>
-                </p>
+                </div>
               </div>
             </div>
           </section>
