--- a/index.html
+++ b/index.html
@@ -433,6 +433,78 @@
               </div>
             </header>
             <div style="margin-top: 50px">
+              <table>
+                <tr>
+                  <th scope="col">구분</th>
+                  <th scope="col">내용</th>
+                </tr>
+                <tr>
+                  <td>성취기준</td>
+                  <td>
+                    <p>
+                      <text style="font-size: 2rem"
+                        >[4사03-01] 최근 사회 변화의 양상과 특징을 파악하고,
+                        그로 <br />인해 나타난 생활 모습의 변화를
+                        탐색한다.</text
+                      >
+                    </p>
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </section>
+
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                data-id="header-title"
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>단원 설계안</text>
+              </div>
+            </header>
+            <div style="margin-top: 50px">
               <img src="public/32concept.png" />
             </div>
           </section>
