--- a/index.html
+++ b/index.html
@@ -3016,6 +3016,15 @@
             </p>
           </section>
         </section>
+        <section
+          data-transition="convex"
+          data-background-gradient="linear-gradient(to right, #29323c, #485563)"
+        >
+          <h1>연구 자료 공유</h1>
+          <div>
+            <img src="public/qr.png" style="width: 500px; height: 500px" />
+          </div>
+        </section>
       </div>
     </div>
 
