--- a/index.html
+++ b/index.html
@@ -2896,7 +2896,6 @@
               >
             </p>
           </section>
-
           <section data-auto-animate>
             <h1 class="r-fit-text">개념 기반 교육과정 단원 설계 과정</h1>
             <p>
@@ -2914,6 +2913,7 @@
             <div>
               <ul>
                 <li>GRASPS 방식</li>
+                <li>Erickson 방식</li>
               </ul>
             </div>
           </section>
@@ -2933,13 +2933,18 @@
                   padding-right: 25px;
                   border-right: 3px solid black;
                   padding-top: 10px;
+                  align-content: flex-start;
                 "
               >
                 <h3>GRASPS 방식</h3>
                 <div>
                   <ul>
-                    <li></li>
-                    <li></li>
+                    <li>Goal</li>
+                    <li>Role</li>
+                    <li>Audience</li>
+                    <li>Situation</li>
+                    <li>Performance</li>
+                    <li>Standards</li>
                   </ul>
                 </div>
               </div>
@@ -2954,8 +2959,12 @@
                 <h3>Erickson 방식</h3>
                 <div>
                   <ul>
-                    <li></li>
-                    <li></li>
+                    <li>무엇을</li>
+                    <br />
+                    <li>왜</li>
+                    <br />
+                    <li>어떻게</li>
+                    <br />
                   </ul>
                 </div>
               </div>
