--- a/index.html
+++ b/index.html
@@ -2381,7 +2381,7 @@
                 <text>총괄평가</text>
               </div>
             </header>
-            <div style="margin-top: 100px; height: 50vh">
+            <div style="margin-top: 100px; height: 60vh">
               <img src="public/ju-final-test.png" />
             </div>
           </section>
@@ -2434,7 +2434,7 @@
                 <text>학습활동</text>
               </div>
             </header>
-            <div style="margin-top: 100px; height: 50vh">
+            <div style="margin-top: 100px; height: 60vh">
               <img src="public/ju-curriculum.png" style="object-fit: cover" />
             </div>
           </section>
@@ -2488,10 +2488,82 @@
               </div>
             </header>
             <div
-              style="margin-top: 50px; display: flex; width: 30vw; height: 40vh"
+              style="
+                margin-top: 50px;
+                display: flex;
+                height: 40vh;
+                margin-left: 100px;
+              "
             >
-              <img src="public/ju-23.jpg" style="margin-right: 50px" />
-              <img src="public/ju-234.jpg" />
+              <img
+                src="public/수업장면1.png"
+                style="margin-right: 50px"
+              />
+              <img src="public/수업장면2.jpeg" />
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>수업 장면</text>
+              </div>
+            </header>
+            <div
+              style="
+                margin-top: 50px;
+                display: flex;
+                height: 40vh;
+                margin-left: 100px;
+              "
+            >
+              <img
+                src="public/수업장면3.jpeg"
+                style="margin-right: 50px"
+              />
+              <img src="public/수업장면4.jpeg" />
             </div>
           </section>
           <section data-auto-animate>
@@ -2545,7 +2617,7 @@
             </header>
             <div style="margin-top: 100px" style="height: 40vh">
               <!-- 11차시 활동 결과물 사진 추가 -->
-              <img src="public/11-result.png" />
+              <img src="public/활동결과물1.jpeg" />
             </div>
           </section>
           <section data-auto-animate>
@@ -2597,9 +2669,71 @@
                 <text>활동 결과물</text>
               </div>
             </header>
-            <div style="margin-top: 100px" style="width: 100vw; height: 100vh">
+            <div
+              style="margin-top: 100px"
+              style="display: flex; width: 100vw; height: 50vh"
+            >
               <!-- 12~13차시 활동 결과물 사진 추가 -->
-              <img src="public/12-result.png" style="object-fit: cover" />
+
+              <img src="public/활동결과물2.png" />
+            </div>
+          </section>
+          <section data-auto-animate>
+            <header style="display: flex; position: fixed; top: 0">
+              <div class="r-stack">
+                <div
+                  data-id="box1"
+                  style="
+                    background: cyan;
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box2"
+                  style="
+                    background: magenta;
+                    width: 70px;
+                    height: 70px;
+                    border-radius: 200px;
+                  "
+                ></div>
+                <div
+                  data-id="box3"
+                  style="
+                    background: yellow;
+                    width: 40px;
+                    height: 40px;
+                    border-radius: 200px;
+                  "
+                ></div>
+              </div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                  margin-left: 50px;
+                "
+              ></div>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: column;
+                  justify-content: center;
+                "
+              >
+                <text>활동 결과물</text>
+              </div>
+            </header>
+            <div
+              style="margin-top: 100px"
+              style="display: flex; width: 100vw; height: 50vh"
+            >
+              <!-- 12~13차시 활동 결과물 사진 추가 -->
+
+              <img src="public/활동결과물3.png" />
             </div>
           </section>
           <section data-auto-animate data-background-video="">
@@ -3032,6 +3166,19 @@
           <h1>연구 자료 공유</h1>
           <div>
             <img src="public/qr.png" style="width: 500px; height: 500px" />
+          </div>
+        </section>
+        <section
+          data-transition="convex"
+          data-background-gradient="linear-gradient(to right, #f83600, #f9d423)"
+        >
+          <h1>🍲 식사장소 🍲</h1>
+          <div>
+            <h2 class="fragment fade-up">나주 혁신도시 울아비소머리국밥</h2>
+            <p class="fragment fade-up">나주시 우정로 10 사동 110호 118호</p>
+            <p class="fragment fade-up">
+              카풀로 이동하여 다시 복귀하여 이동 추천
+            </p>
           </div>
         </section>
       </div>
