--- a/index.html
+++ b/index.html
@@ -2495,11 +2495,8 @@
                 margin-left: 100px;
               "
             >
-              <img
-                src="public/수업장면1.png"
-                style="margin-right: 50px"
-              />
-              <img src="public/수업장면2.jpeg" />
+              <img src="public/scene1.png" style="margin-right: 50px" />
+              <img src="public/scene2.jpeg" />
             </div>
           </section>
           <section data-auto-animate>
@@ -2559,11 +2556,8 @@
                 margin-left: 100px;
               "
             >
-              <img
-                src="public/수업장면3.jpeg"
-                style="margin-right: 50px"
-              />
-              <img src="public/수업장면4.jpeg" />
+              <img src="public/scene3.jpeg" style="margin-right: 50px" />
+              <img src="public/scene4.jpeg" />
             </div>
           </section>
           <section data-auto-animate>
@@ -2617,7 +2611,7 @@
             </header>
             <div style="margin-top: 100px" style="height: 40vh">
               <!-- 11차시 활동 결과물 사진 추가 -->
-              <img src="public/활동결과물1.jpeg" />
+              <img src="public/result1.jpeg" />
             </div>
           </section>
           <section data-auto-animate>
@@ -2675,7 +2669,7 @@
             >
               <!-- 12~13차시 활동 결과물 사진 추가 -->
 
-              <img src="public/활동결과물2.png" />
+              <img src="public/result2.png" />
             </div>
           </section>
           <section data-auto-animate>
@@ -2733,7 +2727,7 @@
             >
               <!-- 12~13차시 활동 결과물 사진 추가 -->
 
-              <img src="public/활동결과물3.png" />
+              <img src="public/result3.png" />
             </div>
           </section>
           <section data-auto-animate data-background-video="">
